.k8/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cubanews-ingress
  labels:
    project: cubanews
spec:
  rules:
    - host: cubanews.icu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cubanews-web-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: cubanews-rest-api-service
              port:
                number: 8080
